@@ -1,10 +1,10 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin bench n 0.3]
+[manpage_begin bench n 0.3.1]
 [copyright {2007 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {Benchmarking/Performance tools}]
 [titledesc {bench - Processing benchmark suites}]
 [require Tcl 8.2]
-[require bench [opt 0.3]]
+[require bench [opt 0.3.1]]
 [description]
 
 This package provides commands for the execution of benchmarks written
